# hhs-realtime

LabA/ExerciseA/: CMakeLists.txt  README.md  Timer.h  main.cpp
LabA/ExerciseB/: CMakeLists.txt  README.md  Timer.cpp  main.cpp
LabB/ExerciseA/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Sensor.cpp  Sensor.hpp  Verwerker.cpp  Verwerker.hpp  main.cpp
LabB/ExerciseB/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Sensor.cpp  main.cpp
LabB/ExerciseC/: CMakeLists.txt  Verwerker.cpp  Verwerker.hpp  main.cpp
LabB/ExerciseD/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Sensor.hpp  Verwerker.cpp  Verwerker.hpp  main.cpp
